@@ -1,3 +1,9 @@
+2015-10-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/interactive/battery.sh: compatible with multiple batteries
+	tabular output
+	no energy flow rates etc.
+
 2015-05-07	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/interactive/ensnbautoadmin.sh: auto-enter admin password
